--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> 
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
+<!--React^^^-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script><!--jquery-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sass.js/0.9.2/sass.min.js" integrity="sha512-mA5b7w9mZvGLWgjIqp9KhWNzkkZ/H3gC4Ua6GOn9m/xl1UF4ghH8GsriKvAYxLsxoKvn6NdebW7kZ6iGB3CGSg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> <!--SCSS-->
 
     <title>25+5 Clock</title>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/babel" src="./script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script type="text/babel" src="./script.js"></script>
+    
          <div id="Load"></div>
          
 </body>
